make minor fix to blockquote alignment

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ section {
     color: white;
     display: flex;
     flex-direction: column;
-    padding-right:300px;
+    padding-right:350px;
     flex-wrap: wrap;
 }
 
